src/objects/Ter_Homologacion_Listas__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuración personalizada para homologar los valores de las listas que lleguen en las integraciones</description>
    <fields>
        <fullName>Ter_Campo__c</fullName>
        <description>Campo del objeto para el cual se esta homologando el valor</description>
        <label>Campo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Objeto__c</fullName>
        <description>Objeto de salesforce para el cual se esta homologando la información</description>
        <label>Objeto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Valor_Externo__c</fullName>
        <description>Valor que proviene del sistema externo</description>
        <label>Valor Externo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Valor_Homologado__c</fullName>
        <description>Valor que se usa en Salesforce</description>
        <label>Valor Homologado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Homologacion Listas</label>
</CustomObject>